# internal/handlers/user.go
@@ -14,12 +14,12 @@ func (h *handler) Register(ctx context.Context, params *models.RegisterRequest) 
 	return nil
 }
 
-func (h *handler) Login(ctx context.Context, params *models.LoginRequest) error {
-	err := h.useCase.Login(ctx, params)
+func (h *handler) Login(ctx context.Context, params *models.LoginRequest) (*models.LoginResponse, error) {
+	res, err := h.useCase.Login(ctx, params)
 	if err != nil {
-		return err
+		return nil, err
 	}
-	return nil
+	return res, nil
 }
 
 func (h *handler) Logout(ctx context.Context, params *user.PatchLogoutParams) error {
